# PaziLab1

./: CMakeLists.txt  README.md  gost_curve_params.h  main.c
jacobi_curve/: jacobi_curve.c  jacobi_curve.h
point/: point.c  point.h
